--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -23,7 +23,7 @@
             android:id="@+id/editMessage"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="5"
+            android:layout_weight="3"
             android:layout_alignParentBottom="true"/>
         <Button
             android:id="@+id/toggleSecret"
@@ -32,12 +32,17 @@
             android:layout_weight="1"
             android:text="*" />
         <Button
+            android:id="@+id/secretSendMessage"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="**>"/>
+        <Button
             android:id="@+id/sendMessage"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Send"
-            android:onClick="sendMessage"/>
+            android:text="Send"/>
     </LinearLayout>
 
 
