--- a/app/src/main/res/layout/chat_card.xml
+++ b/app/src/main/res/layout/chat_card.xml
@@ -14,7 +14,8 @@
         android:orientation="vertical"
         android:padding="0dp"
         android:layout_margin="0dp"
-        android:background="@drawable/contact_item_border">
+        android:background="@drawable/contact_item_border"
+        android:id="@+id/contact_card_background">
         <TextView
             android:id="@+id/info_text"
             android:layout_marginLeft="20dp"
