--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,14 @@
         <item name="fontPath">fonts/Raleway-Regular.ttf</item>
     </style>
 
+    <style name="TextInputLabel" parent="TextAppearance.AppCompat">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">@color/favorite</item>
+        <!--item name="android:textSize">20sp</item-->
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorAccent">@color/colorLogin</item>
+        <item name="colorControlNormal">@color/colorLogin</item>
+        <item name="colorControlActivated">@color/colorLogin</item>
+    </style>
+
 </resources>
