--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -10,30 +10,19 @@
         android:id="@+id/top"
         android:paddingBottom="16dp"
         android:padding="0dp"
-        android:background="@drawable/page_border"
-        android:orientation="vertical"
-        android:weightSum="3">
+        android:background="@drawable/background_gradient"
+        android:weightSum="3"
+        android:orientation="vertical">
 
         <android.support.v7.widget.RecyclerView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/contacts_recycler"
             android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never"
-            android:background="@drawable/background_gradient" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="3">
-        <View
-            android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:overScrollMode="never"
             android:layout_weight="2"/>
+
         <android.support.v7.widget.RecyclerView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/letters_recycler"
@@ -41,8 +30,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:overScrollMode="never"
-            android:background="@android:color/transparent"
             android:layout_weight="1" />
+
+
     </LinearLayout>
 
 </RelativeLayout>
