--- a/app/src/main/res/layout/letter_card.xml
+++ b/app/src/main/res/layout/letter_card.xml
@@ -5,11 +5,12 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_margin="5dp"
-    android:layout_height="50dp"
+    android:layout_height="30dp"
     card_view:cardCornerRadius="2dp"
     android:layout_marginBottom="0dp"
     android:clickable="true"
-    app:cardElevation="2dp">
+    app:cardElevation="2dp"
+    >
 
     <FrameLayout
         android:id="@+id/card_front"
@@ -21,10 +22,10 @@
             android:id="@+id/letter_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="A"
             android:textColor="#000000"
             android:gravity="center_vertical"
-            android:textSize="30dp"/>
+            android:textAlignment="center"
+            android:textSize="20dp"/>
 
     </FrameLayout>
 
