--- a/app/src/main/res/layout/contact_card.xml
+++ b/app/src/main/res/layout/contact_card.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/tools"
     android:id="@+id/card_view"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_margin="5dp"
     android:layout_height="150dp"
     card_view:cardCornerRadius="2dp"
