--- a/app/src/main/res/layout/letter_card.xml
+++ b/app/src/main/res/layout/letter_card.xml
@@ -24,7 +24,8 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:textAlignment="center"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textAppearance="@style/ralewayReg"/>
 
     </FrameLayout>
 
