--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -46,7 +46,8 @@
             android:text="@string/take_pic"
             android:layout_below="@+id/lastName"
             android:id="@+id/takePic"
-            android:onClick="takePic"/>
+            android:onClick="takePic"
+            android:background="@drawable/button_login"/>
 
         <ImageView
             android:id="@+id/image"
@@ -62,7 +63,8 @@
             android:id="@+id/createUser"
             android:layout_alignParentStart="true"
             android:layout_alignEnd="@+id/lastName"
-            android:layout_alignParentBottom="true" />
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/button_login"/>
 
     </RelativeLayout>
 
