--- a/app/src/main/res/layout/contact_card_back.xml
+++ b/app/src/main/res/layout/contact_card_back.xml
@@ -2,26 +2,41 @@
 <LinearLayout android:id="@+id/back"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="0dp"
     android:layout_margin="0dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     app:elevation="0dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:weightSum="4">
 
-    <Button
-        android:id="@+id/add_chat_prompt"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:textAppearance="@style/ralewayReg"
-        android:background="@drawable/contact_item_border"/>
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="3">
+        <Button
+            android:id="@+id/add_chat_prompt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textAppearance="@style/ralewayReg"
+            android:background="@drawable/contact_item_border"/>
+        <Button
+            android:id="@+id/profile_prompt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textAppearance="@style/ralewayReg"
+            android:background="@drawable/contact_item_border"/>
+    </LinearLayout>
     <Button
         android:id="@+id/dismiss_prompt"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:textAppearance="@style/ralewayReg"
-        android:background="@drawable/contact_item_border"/>
+        android:background="#ffffff"/>
+
 
 </LinearLayout>
