--- a/app/src/main/res/layout/fragment_contact_profile.xml
+++ b/app/src/main/res/layout/fragment_contact_profile.xml
@@ -7,19 +7,24 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/contact_name"
         android:textAppearance="@style/ralewayReg"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:text="Brandon"/>
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/contact_email"
         android:textAppearance="@style/ralewayReg"
         android:layout_below="@+id/contact_name"
-        android:textSize="20dp"
+        android:textSize="12dp"
         android:text="Wang"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/contact_pic"
+        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
