--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.brandon.mailbox.ChatActivity">
+    tools:context="com.brandon.mailbox.chat.ChatActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/chat_messages_recycler"
